syntax = "proto3";

option go_package = "internal/proto/echo";

package internal.proto.echo;

message Request {
  string message = 1;
}

message Response {
  string message = 1;
}

service Echo {
  rpc Single(Request) returns (Response) {}
  rpc ServiceStream(Request) returns (stream Response) {}
  rpc ClientStream(stream Request) returns (Response) {}
  rpc BothStream(stream Request) returns (stream Response) {}
}
